# power-law-research

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
power_law_research/: data_modules.py  models.py  utils.py
power_law_research/experiments/: draw_and_save_log.py  search_gamma.py  search_gamma.sh  synthetic_cgd_datamodule.py  train_cifar10_resnet18.analyze_log.ipynb  train_cifar10_resnet18.py  train_cifar10_resnet18_vanila.py  train_cifar10_resnet18_vanilla.py  train_fmnist.analyze_log.ipynb  train_fmnist.py  train_stl10.analyze_log.ipynb  train_stl10_resnet.py
power_law_research/notebooks/: 01-VAE_fireing_plots.ipynb  02-scale_free_MLP.ipynb  03-whitening.ipynb  100-playground.ipynb  analyze_generated_pics.ipynb  analyze_log_csv.ipynb  cifar.ipynb  gamma_loss_ave.csv  gamma_loss_ave_0.001.csv  gamma_loss_ave_0.01.csv
power_law_research/notebooks/reproduce_noam_2023/: plot_cgd.ipynb  plot_various_datasets.ipynb
